syntax = "proto3";
package pb;
option go_package = "./pb";

message blank{}

message Response {
    bool is_success = 1;
    string message = 2;
}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryList {
    repeated Category categories = 1;
}

message CategoryGetRequest {
    string id = 1;
}

message CategoryDeleteRequest {
    string id = 1;
}

message CategoryUpdateRequest {
    string id = 1;
    string name = 2;
    string description = 3;
}

message Course {
    string id = 1;
    string name = 2;
    string description = 3;
    string category_id = 4;
}

message CreateCourseRequest {
    string name = 1;
    string description = 2;
    string category_id = 3;
}

message Courses {
    repeated Course courses = 1;
}

message CourseGetRequest {
    string id = 1;
}

message CourseDeleteRequest {
    string id = 1;
}

message CourseUpdateRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string category_id = 4;
}

message ListCoursesFromCategoryRequest {
    string category_id = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserGetRequest {
    string id = 1;
}

message UserByEmailGetRequest {
    string email = 1;
}

message UserForJWT {
    string email = 1;
    string password = 2;
}

message JWTToken {
    string token = 1;
}

message UserDeleteRequest {
    string id = 1;
}

message Users {
    repeated User users = 1;
}

message UserUpdateRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
    rpc ListCategories(blank) returns (CategoryList) {}
    rpc GetCategory(CategoryGetRequest) returns (Category) {}

    rpc DeleteCategory(CategoryDeleteRequest) returns (Response) {}
    rpc UpdateCategory(CategoryUpdateRequest) returns (Response) {}
}

service CourseService {
    rpc CreateCourse(CreateCourseRequest) returns (Course) {}
    rpc ListCourses(blank) returns (Courses) {}
    rpc GetCourse(CourseGetRequest) returns (Course) {}
    rpc DeleteCourse(CourseDeleteRequest) returns (Response) {}
    rpc UpdateCourse(CourseUpdateRequest) returns (Response) {}
    rpc ListCoursesFromCategory(ListCoursesFromCategoryRequest) returns (Courses) {}
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {}
    rpc GetUser(UserGetRequest) returns (User) {}
    rpc ListUsers(blank) returns (Users) {}
    rpc GetJWTToken(UserForJWT) returns (JWTToken) {}
    rpc DeleleUser(UserDeleteRequest) returns (Response) {}
    rpc UpdateUser(UserUpdateRequest) returns (Response) {}

}